--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                   <span id="value2">40000</span>
                 </div>
               </div>
+            <button type="button" class="prev-btn inicio">Anterior</button>
             <button type="button" class="next-btn">Siguiente</button>
         </div>
         <div class="slide">
@@ -108,6 +109,11 @@
 
 
     </div>
+</div>
+<div class="call-to-action1">
+    <p>¿Queres mejor la calidad de tus canchas? Te podemos ayudar</p>
+    <button class="button"><a href="https://wa.link/s4bv3b" target="_blank">¡Consultanos!</a></button>
+   
 </div>
 
 
