responsive y link ws cada paleta

--- a/result.html
+++ b/result.html
@@ -13,18 +13,21 @@
                 <img src="./assets/img/paleta-defecto.jpg" alt="Paleta 1">
                 <h2></h2>
                 <p></p>
+                <button class="button"><a href="" target="_blank">Consultar</a></button>
             </div>
             <div class="paleta">
                 <img src="./assets/img/paleta-defecto.jpg" alt="Paleta 1">
-                <h2>Nombre de paleta N°1</h2>
-                <p>Descripción de la paleta</p>
+                <h2></h2>
+                <p></p>
+                <button class="button"><a href="" target="_blank">Consultar</a></button>
             </div>
                 
                
             <div class="paleta">
                 <img src="./assets/img/paleta-defecto.jpg" alt="Paleta 1">
-                <h2>Nombre de paleta N°1</h2>
-                <p>Descripción de la paleta</p>
+                <h2></h2>
+                <p></p>
+                <button class="button"><a href="" target="_blank">Consultar</a></button>
             </div>
         </div>           
 
