--- a/result.html
+++ b/result.html
@@ -3,6 +3,8 @@
 <head>
     <title>Tu paleta ideal</title>
     <link rel="stylesheet" href="./assets/style-result.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
     <div class="container">
