--- a/result.html
+++ b/result.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>¡Tu paleta ideal está aquí!</h1>
-
+        <p class="presentacion"></p>
         <div class="paletas">
             <div class="paleta">
                 <img src="./assets/img/paleta-defecto.jpg" alt="Paleta 1">
@@ -35,6 +35,7 @@
 
 
     </div>
+    <p class="oferta">*3 cuotas sin interés, 29% de descuento en 1 pago,38% de descuento en efectivo (combinables)</p>
     <div class="call-to-action1">
         <p>¿Buscas otro modelo? Te asesoramos para que puedas encontrar tu paleta ideal</p>
         <button class="button"><a href="https://wa.link/s4bv3b" target="_blank">¡Quiero asesoramiento!</a></button>
