--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
 </div>
 <div class="call-to-action1">
-    <p>¿Queres mejor la calidad de tus canchas? Te podemos ayudar</p>
+    <p>¿Queres mejorar la calidad de tus canchas? Te podemos ayudar</p>
     <button class="button"><a href="https://wa.link/s4bv3b" target="_blank">¡Consultanos!</a></button>
    
 </div>
