--- a/result.html
+++ b/result.html
@@ -11,7 +11,7 @@
         <h1>¡Tu paleta ideal está aquí!</h1>
         <p class="presentacion"></p>
         <div class="paletas">
-            <div class="paleta">
+            <!-- <div class="paleta">
                 <img src="./assets/img/paleta-defecto.jpg" alt="Paleta 1">
                 <h2></h2>
                 <p></p>
@@ -30,7 +30,7 @@
                 <h2></h2>
                 <p></p>
                 <button class="button"><a href="" target="_blank">Consultar</a></button>
-            </div>
+            </div> -->
         </div>           
 
 
@@ -45,6 +45,20 @@
 
         <p>¡Mirá por qué los clientes nos eligen!</p>
         <button class="button-light"><a href="https://www.google.com/search?q=paddleshow&oq=pa&gs_lcrp=EgZjaHJvbWUqCAgDEEUYJxg7MgYIABBFGDwyBggBEEUYPDIGCAIQRRg8MggIAxBFGCcYOzIGCAQQRRg8MgYIBRBFGDwyBggGEEUYPDIGCAcQRRg80gEINTM4MWowajeoAgCwAgA&sourceid=chrome&ie=UTF-8#lrd=0x95bcbf6d7c5f0d11:0xa98d7b853a1b6724,1,,,," target="_blank">Ver sus opiniones</a></button>
+    </div>
+    <div class="consulta">
+        <form class="consulta-form">
+            <h3 class="paleta-seleccionada"></h3>
+            <span>Completa los datos para consultar</span>
+            <br>
+            <label for="altura">Nombre*</label>
+            <input type="text" name="" id="" placeholder="Nombre" required>
+            <label for="altura">Localidad*</label>
+            <input type="text" name="" id="" placeholder="Localidad" required>
+            <button type="submit" class="button btn-consulta"><a href="" target="_blank"></a>Consultar</button>
+            <button type="button" class="button-transparent btn-consulta cerrar"><a href="" target="_blank"></a>Cerrar</button>
+        </form>
+    
     </div>
 
     <script src="index-results.js"></script>
