--- a/result.html
+++ b/result.html
@@ -44,7 +44,11 @@
     <div class="call-to-action2">
 
         <p>¡Mirá por qué los clientes nos eligen!</p>
-        <button class="button-light"><a href="https://www.google.com/search?q=paddleshow&oq=pa&gs_lcrp=EgZjaHJvbWUqCAgDEEUYJxg7MgYIABBFGDwyBggBEEUYPDIGCAIQRRg8MggIAxBFGCcYOzIGCAQQRRg8MgYIBRBFGDwyBggGEEUYPDIGCAcQRRg80gEINTM4MWowajeoAgCwAgA&sourceid=chrome&ie=UTF-8#lrd=0x95bcbf6d7c5f0d11:0xa98d7b853a1b6724,1,,,," target="_blank">Ver sus opiniones</a></button>
+        <div>
+            <button class="button-light"><a href="https://www.google.com/search?q=paddleshow&oq=pa&gs_lcrp=EgZjaHJvbWUqCAgDEEUYJxg7MgYIABBFGDwyBggBEEUYPDIGCAIQRRg8MggIAxBFGCcYOzIGCAQQRRg8MgYIBRBFGDwyBggGEEUYPDIGCAcQRRg80gEINTM4MWowajeoAgCwAgA&sourceid=chrome&ie=UTF-8#lrd=0x95bcbf6d7c5f0d11:0xa98d7b853a1b6724,1,,,," target="_blank">Ver sus opiniones</a></button>
+            <button class="button-light"><a href="https://www.instagram.com/paddleshow" target="_blank">Instagram</a></button>
+        </div>
+      
     </div>
     <div class="consulta">
         <form class="consulta-form">
@@ -55,6 +59,23 @@
             <input type="text" name="" id="" placeholder="Nombre" required>
             <label for="altura">Localidad*</label>
             <input type="text" name="" id="" placeholder="Localidad" required>
+            <button type="submit" class="button btn-consulta"><a href="" target="_blank"></a>Consultar</button>
+            <button type="button" class="button-transparent btn-consulta cerrar"><a href="" target="_blank"></a>Cerrar</button>
+        </form>
+    
+    </div>
+    <div class="consulta-otra">
+        <form class="consulta-form-otra">
+            <span>Completa los datos para consultar</span>
+            <br>
+            <label for="altura">Nombre*</label>
+            <input type="text" name="" id="" placeholder="Nombre" required>
+            <label for="altura">Localidad*</label>
+            <input type="text" name="" id="" placeholder="Localidad" required>
+            <label for="altura">Marca y Modelo</label>
+            <input type="text" name="" id="" placeholder="Marca">
+            <br>
+            <input type="text" name="" id="" placeholder="Modelo">
             <button type="submit" class="button btn-consulta"><a href="" target="_blank"></a>Consultar</button>
             <button type="button" class="button-transparent btn-consulta cerrar"><a href="" target="_blank"></a>Cerrar</button>
         </form>
