--- a/result.html
+++ b/result.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+
         <h1>¡Tu paleta ideal está aquí!</h1>
         <p class="presentacion"></p>
         <div class="paletas">
@@ -35,9 +36,9 @@
 
 
     </div>
-    <p class="oferta">*3 cuotas sin interés, 29% de descuento en 1 pago,38% de descuento en efectivo (combinables)</p>
+    <p class="oferta">*3 cuotas sin interés, 29% de descuento en 1 pago,38% de descuento en efectivo (combinables) <br>Promos con envío gratis a todo el país</p>
     <div class="call-to-action1">
-        <p>¿Buscas otro modelo? Te asesoramos para que puedas encontrar tu paleta ideal</p>
+        <p>¿Buscas otra marca o modelo? Te lo conseguimos y con los mejores precios!</p>
         <button class="button"><a href="https://wa.link/s4bv3b" target="_blank">¡Quiero asesoramiento!</a></button>
        
     </div>
