links instagram y google

--- a/result.html
+++ b/result.html
@@ -46,8 +46,8 @@
 
         <p>¡Mirá por qué los clientes nos eligen!</p>
         <div>
-            <button class="button-light"><a href="https://www.google.com/search?q=paddleshow&oq=pa&gs_lcrp=EgZjaHJvbWUqCAgDEEUYJxg7MgYIABBFGDwyBggBEEUYPDIGCAIQRRg8MggIAxBFGCcYOzIGCAQQRRg8MgYIBRBFGDwyBggGEEUYPDIGCAcQRRg80gEINTM4MWowajeoAgCwAgA&sourceid=chrome&ie=UTF-8#lrd=0x95bcbf6d7c5f0d11:0xa98d7b853a1b6724,1,,,," target="_blank">Ver sus opiniones</a></button>
-            <button class="button-light"><a href="https://www.instagram.com/paddleshow" target="_blank">Instagram</a></button>
+            <button class="button"><a href="https://www.google.com/maps/place/Paddle+Show/@-34.6136343,-58.7050516,17z/data=!3m1!4b1!4m6!3m5!1s0x95bcbf6d7c5f0d11:0xa98d7b853a1b6724!8m2!3d-34.6136343!4d-58.7050516!16s%2Fg%2F11sgl6f3gk?entry=ttu" target="_blank">Ver sus opiniones</a></button>
+            <button class="button"><a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTk1MzU3MjU4OTU4NDQw/?igsh=bnlka3pmM3F6Y2tr" target="_blank">Instagram</a></button>
         </div>
       
     </div>
