--- a/result.html
+++ b/result.html
@@ -11,6 +11,7 @@
 
         <h1>¡Tu paleta ideal está aquí!</h1>
         <p class="presentacion"></p>
+        <div class="botones"></div>
         <div class="paletas">
             <!-- <div class="paleta">
                 <img src="./assets/img/paleta-defecto.jpg" alt="Paleta 1">
@@ -47,8 +48,9 @@
         <p>¡Mirá por qué los clientes nos eligen!</p>
         <div>
             <button class="button"><a href="https://www.google.com/maps/place/Paddle+Show/@-34.6136343,-58.7050516,17z/data=!3m1!4b1!4m6!3m5!1s0x95bcbf6d7c5f0d11:0xa98d7b853a1b6724!8m2!3d-34.6136343!4d-58.7050516!16s%2Fg%2F11sgl6f3gk?entry=ttu" target="_blank">Ver sus opiniones</a></button>
-            <button class="button"><a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTk1MzU3MjU4OTU4NDQw/?igsh=bnlka3pmM3F6Y2tr" target="_blank">Instagram</a></button>
+            <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTk1MzU3MjU4OTU4NDQw/?igsh=bnlka3pmM3F6Y2tr" target="_blank"><img class="instagram" src="./assets/img/icons8-instagram-100.png"></a>
         </div>
+        
       
     </div>
     <div class="consulta">
