--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paddle Show</title>
+    <!-- Título de la página -->
+    <title>PaddleShow | Encuentra tu paleta de páddel ideal</title>
+
+    <!-- Descripción -->
+    <meta name="description" content="En PaddleShow puedes cotizar y encontrar la paleta de páddel perfecta. Servicios médicos especializados, mejora de rendimiento y mantenimiento de canchas.">
+
+    <!-- Keywords -->
+    <meta name="keywords" content="pádel, paletas de pádel, cotización de paletas, servicios médicos para pádel, mejora de rendimiento, mantenimiento de canchas, PaddleShow">
+
+    <!-- Open Graph para Facebook y otras redes -->
+    <meta property="og:title" content="PaddleShow | Encuentra tu paleta de páddel ideal">
+    <meta property="og:description" content="Cotiza y encuentra la paleta de pádel perfecta. Descubre nuestros servicios médicos, mejora tu rendimiento y optimiza tus canchas.">
+    <meta property="og:image" content="./assets/img/Workshop-150x150 (1).png">
+    <meta property="og:url" content="https://www.paddleshow.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="PaddleShow | Encuentra tu paleta de páddel ideal">
+    <meta name="twitter:description" content="Cotiza y encuentra la paleta de pádel perfecta. Descubre nuestros servicios médicos, mejora tu rendimiento y optimiza tus canchas.">
+    <meta name="twitter:image" content="./assets/img/Workshop-150x150 (1).png">
+    <meta name="twitter:url" content="https://www.paddleshow.com">
+
+    <!-- Favicon -->
+    <link rel="icon" href="./assets/img/Workshop-150x150 (1).png" type="image/x-icon">
+
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
@@ -125,16 +150,19 @@
     </div>
 </div>
 <p class="oferta">*3 cuotas sin interés, 29% de descuento en 1 pago,38% de descuento en efectivo (combinables) <br> Promos con envío gratis a todo el país</p>
-<div class="call-to-action1">
-    <p>¿Tenés o conocés a alguien que tenga un club de pádel y quiera mejorar sus canchas? O poner nuevas? ¿Te gustaría ganar una comisión por eso?</p>
-    <button class="button canchas">¡Consultanos!</button>
-   
-</div>
-<div class="call-to-action2">
 
-    <p>Te gustaría tener más energía, menos lesiones, mejorar tu salud y tu rendimiento?</p>
-    <button class="button">¡Consultanos!</button>
-</div>
+    <div class="call-to-action1">
+        <p>¿Tenés o conocés a alguien que tenga un club de pádel y quiera mejorar sus canchas? O poner nuevas? ¿Te gustaría ganar una comisión por eso?</p>
+        <button class="button canchas">¡Consultanos!</button>
+       
+    </div>
+    <div class="call-to-action2">
+    
+        <p>Te gustaría tener más energía, menos lesiones, mejorar tu salud y tu rendimiento?</p>
+        <button class="button">¡Consultanos!</button>
+    </div>
+
+
 <div class="call-to-action1">
 
     <p>¡Mirá por qué los clientes nos eligen!</p>
@@ -142,6 +170,11 @@
         <button class="button"><a href="https://www.google.com/maps/place/Paddle+Show/@-34.6136343,-58.7050516,17z/data=!3m1!4b1!4m6!3m5!1s0x95bcbf6d7c5f0d11:0xa98d7b853a1b6724!8m2!3d-34.6136343!4d-58.7050516!16s%2Fg%2F11sgl6f3gk?entry=ttu" target="_blank">Ver sus opiniones</a></button>
         <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTk1MzU3MjU4OTU4NDQw/?igsh=bnlka3pmM3F6Y2tr" target="_blank"><img class="instagram" src="./assets/img/icons8-instagram-100.png"></a>
     </div>
+  
+</div>
+<div class="call-to-action3">
+
+    <p>Copyright (c)<span id="year"></span> Desarrollado por <a href="https://duwohdevelopers.com/" target="_blank">Duwoh Developers</a></p>
   
 </div>
 <div class="consulta">
