--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 </div>
 <img src="./assets/img/avance-rapido.gif" alt="flecha" class="flecha">
 
-<p class="oferta">*3 cuotas sin interés, 30% de descuento en 1 pago,40% de descuento en efectivo (combinables) <br> Promos con envío gratis a todo el país</p>
+<p class="oferta">*6 cuotas sin interés, 15% de descuento en 3 pago, 25% de descuento en 1 pago,35% de descuento en efectivo (combinables) <br> Promos con envío gratis a todo el país</p>
 
     <div class="call-to-action1">
         <p>¿Tenés o conocés a alguien que tenga un club de pádel y quiera mejorar sus canchas? O poner nuevas? ¿Te gustaría ganar una comisión por eso?</p>
