--- a/result.html
+++ b/result.html
@@ -51,7 +51,7 @@
 
 
     </div>
-    <p class="oferta">*3 cuotas sin interés, 30% de descuento en 1 pago,40% de descuento en efectivo (combinables) <br> Promos con envío gratis a todo el país</p>
+    <p class="oferta">*6 cuotas sin interés, 15% de descuento en 3 pago, 25% de descuento en 1 pago,35% de descuento en efectivo (combinables) <br> Promos con envío gratis a todo el país</p>
     <div class="call-to-action1">
         <p>¿Buscas otra marca o modelo? Te lo conseguimos y con los mejores precios!</p>
         <button class="button"><a href="https://wa.link/s4bv3b" target="_blank">¡Quiero asesoramiento!</a></button>
