--- a/index.html
+++ b/index.html
@@ -30,8 +30,22 @@
     <link rel="icon" href="./assets/img/Workshop-150x150 (1).png" type="image/x-icon">
 
     <link rel="stylesheet" href="./assets/style.css">
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-THMWC4W5');</script>
+        <!-- End Google Tag Manager -->
+    
+    
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-THMWC4W5"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <img class="logo" src="./assets/img/Workshop-150x150 (1).png" alt="logo">  
 
     <div class="container-form"> 
