--- a/result.html
+++ b/result.html
@@ -63,7 +63,7 @@
 
 
     </div>
-    <p class="oferta">*6 cuotas sin interés, 15% de descuento en 3 pago, 25% de descuento en 1 pago,35% de descuento en efectivo (combinables) <br> Promos con envío gratis a todo el país</p>
+    <p class="oferta">*6 cuotas sin interés, 15% de descuento en 3 pagos, 25% de descuento en 1 pago,35% de descuento en efectivo (combinables) <br> Promos con envío gratis a todo el país</p>
     <div class="call-to-action1">
         <p>¿Buscas otra marca o modelo? Te lo conseguimos y con los mejores precios!</p>
         <button class="button"><a href="https://wa.link/s4bv3b" target="_blank">¡Quiero asesoramiento!</a></button>
@@ -73,8 +73,8 @@
 
         <p>¡Mirá por qué nos eligen!</p>
         <div>
-            <a href="https://maps.app.goo.gl/yYVp6A8yVznxG9Nv9" target="_blank"><img src="./assets/img/icons8-logo-de-google-50.png" alt="google" class="instagram"></a>
             <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTk1MzU3MjU4OTU4NDQw/?igsh=bnlka3pmM3F6Y2tr" target="_blank"><img class="instagram" src="./assets/img/icons8-instagram-100.png"></a>
+            <a href="https://maps.app.goo.gl/yYVp6A8yVznxG9Nv9" target="_blank"><img src="./assets/img/icons8-logo-de-google-50.png" alt="google" class="instagram"></a>
         </div>
         
       
