--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
         <div class="slide">
             <h4>Datos del Jugador</h4>
             <label for="altura">¿Cuanto Medis? (cm)*</label>
-            <input type="text" name="" id="" placeholder="Ingresa aqui tu altura" required>
+            <input type="number" name="" id="" placeholder="Ingresa aqui tu altura" required>
             <label for="altura">¿Cuanto Pesas? (kg)*</label>
-            <input type="text" name="" id="" placeholder="Ingresa aqui tu peso" required>
+            <input type="number" name="" id="" placeholder="Ingresa aqui tu peso" required>
             <button type="button" class="prev-btn">Anterior</button>
             <button type="button" class="next-btn">Siguiente</button>
         </div>
