foto presentacion cigio

--- a/result.html
+++ b/result.html
@@ -131,6 +131,8 @@
         
      
         <div class="imagen-sponsor-cigio">
+            <h3>Cigio en la tele</h3>
+            <img src="./assets/img/Presentación marca Cigio 2.jpg" alt="">
             <button type="button" class="button-light" id="cerrarSponsor">Ver Paletas</button>
         </div>
    
