--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Open Graph para Facebook y otras redes -->
     <meta property="og:title" content="PaddleShow | Encuentra tu paleta de páddel ideal">
-    <meta property="og:description" content="Cotiza y encuentra la paleta de pádel perfecta. Descubre nuestros servicios médicos, mejora tu rendimiento y optimiza tus canchas.">
+    <meta property="og:description" content="En PaddleShow puedes cotizar y encontrar la paleta de páddel perfecta. Servicios médicos especializados, mejora de rendimiento y mantenimiento de canchas.">
     <meta property="og:image" content="./assets/img/Workshop-150x150 (1).png">
     <meta property="og:url" content="https://www.paddleshow.com">
     <meta property="og:type" content="website">
@@ -22,7 +22,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="PaddleShow | Encuentra tu paleta de páddel ideal">
-    <meta name="twitter:description" content="Cotiza y encuentra la paleta de pádel perfecta. Descubre nuestros servicios médicos, mejora tu rendimiento y optimiza tus canchas.">
+    <meta name="twitter:description" content="En PaddleShow puedes cotizar y encontrar la paleta de páddel perfecta. Servicios médicos especializados, mejora de rendimiento y mantenimiento de canchas.">
     <meta name="twitter:image" content="./assets/img/Workshop-150x150 (1).png">
     <meta name="twitter:url" content="https://www.paddleshow.com">
 
