modificacion tipo de jugador

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Título de la página -->
-    <title>PaddleShow | Encuentra tu paleta de páddel ideal</title>
+    <title>PaddleShow | Encuentra tu paleta de pádel ideal</title>
 
     <!-- Descripción -->
     <meta name="description" content="PaddleShow. Encontrá todas las paletas de pádel.El mejor precio y servicio en todas las gamas y marcas. Encontra todo para tu club de pádel en PaddleShow">
@@ -116,15 +116,9 @@
             <label for="altura">¿Que categoria jugas?</label>
             <select name="" id="categoria">
                 <option value="default" >Elije una opcion</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
+                <option value="Profesional">Profesional</option>
+                <option value="Intermedio">Intermedio</option>
+                <option value="Principiante">Principiante</option>
             </select>
             <label for="altura">¿Preferis jugar de reves (lado izquierdo) o de drive (lado derecho)?</label>
             
