--- a/result.html
+++ b/result.html
@@ -2,7 +2,7 @@
 <html>
 <head>
       <!-- Título de la página -->
-      <title>PaddleShow | Encuentra tu paleta de páddel ideal</title>
+      <title>PaddleShow | Encuentra tu paleta de pádel ideal</title>
 
       <!-- Descripción -->
       <meta name="description" content="PaddleShow. Encontrá todas las paletas de pádel.El mejor precio y servicio en todas las gamas y marcas. Encontra todo para tu club de pádel en PaddleShow">
