title and description

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Título de la página -->
-    <title>PaddleShow | Encuentra tu paleta de pádel ideal</title>
+    <title>PaddleShow. Encontrá todas las paletas de pádel.</title>
 
     <!-- Descripción -->
-    <meta name="description" content="PaddleShow. Encontrá todas las paletas de pádel.El mejor precio y servicio en todas las gamas y marcas. Encontra todo para tu club de pádel en PaddleShow">
+    <meta name="description" content="El mejor precio y servicio en todas las gamas y marcas, desde básicas hasta importadas. Con asesoramiento personalizado, para que encuentres tu paleta ideal.">
 
     <!-- Keywords -->
     <meta name="keywords" content="pádel, paletas de pádel, cotización de paletas, servicios médicos para pádel, mejora de rendimiento, mantenimiento de canchas, PaddleShow">
 
     <!-- Open Graph para Facebook y otras redes -->
-    <meta property="og:title" content="PaddleShow | Encuentra tu paleta de páddel ideal">
-    <meta property="og:description" content="PaddleShow. Encontrá todas las paletas de pádel.El mejor precio y servicio en todas las gamas y marcas. Encontra todo para tu club de pádel en PaddleShow">
+    <meta property="og:title" content="PaddleShow. Encontrá todas las paletas de pádel.">
+    <meta property="og:description" content="El mejor precio y servicio en todas las gamas y marcas, desde básicas hasta importadas. Con asesoramiento personalizado, para que encuentres tu paleta ideal.">
     <meta property="og:image" content="./assets/img/Workshop-150x150 (1).png">
     <meta property="og:url" content="https://www.paddleshow.com">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="PaddleShow | Encuentra tu paleta de páddel ideal">
-    <meta name="twitter:description" content="PaddleShow. Encontrá todas las paletas de pádel.El mejor precio y servicio en todas las gamas y marcas. Encontra todo para tu club de pádel en PaddleShow">
+    <meta name="twitter:title" content="PaddleShow. Encontrá todas las paletas de pádel.">
+    <meta name="twitter:description" content="El mejor precio y servicio en todas las gamas y marcas, desde básicas hasta importadas. Con asesoramiento personalizado, para que encuentres tu paleta ideal.">
     <meta name="twitter:image" content="./assets/img/Workshop-150x150 (1).png">
     <meta name="twitter:url" content="https://www.paddleshow.com">
 
