--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Título de la página -->
-    <title>PaddleShow. Encontrá todas las paletas de pádel.</title>
+    <title>PaddleShow. Encontrá todas las paletas de padel.</title>
 
     <!-- Descripción -->
     <meta name="description" content="El mejor precio y servicio en todas las gamas y marcas, desde básicas hasta importadas. Con asesoramiento personalizado, para que encuentres tu paleta ideal.">
 
     <!-- Keywords -->
-    <meta name="keywords" content="pádel, paletas de pádel, cotización de paletas, servicios médicos para pádel, mejora de rendimiento, mantenimiento de canchas, PaddleShow">
+    <meta name="keywords" content="padel, paletas de padel, cotización de paletas, servicios médicos para padel, mejora de rendimiento, mantenimiento de canchas, PaddleShow">
 
     <!-- Open Graph para Facebook y otras redes -->
-    <meta property="og:title" content="PaddleShow. Encontrá todas las paletas de pádel.">
+    <meta property="og:title" content="PaddleShow. Encontrá todas las paletas de padel.">
     <meta property="og:description" content="El mejor precio y servicio en todas las gamas y marcas, desde básicas hasta importadas. Con asesoramiento personalizado, para que encuentres tu paleta ideal.">
     <meta property="og:image" content="./assets/img/Workshop-150x150 (1).png">
     <meta property="og:url" content="https://www.paddleshow.com">
@@ -21,7 +21,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="PaddleShow. Encontrá todas las paletas de pádel.">
+    <meta name="twitter:title" content="PaddleShow. Encontrá todas las paletas de padel.">
     <meta name="twitter:description" content="El mejor precio y servicio en todas las gamas y marcas, desde básicas hasta importadas. Con asesoramiento personalizado, para que encuentres tu paleta ideal.">
     <meta name="twitter:image" content="./assets/img/Workshop-150x150 (1).png">
     <meta name="twitter:url" content="https://www.paddleshow.com">
@@ -116,9 +116,15 @@
             <label for="altura">¿Que categoria jugas?</label>
             <select name="" id="categoria">
                 <option value="default" >Elije una opcion</option>
-                <option value="Profesional">Profesional</option>
-                <option value="Intermedio">Intermedio</option>
-                <option value="Principiante">Principiante</option>
+                <option value="Profesional">1 Profesional</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="Principiante">9 Principiante</option>
             </select>
             <label for="altura">¿Preferis jugar de reves (lado izquierdo) o de drive (lado derecho)?</label>
             
