--- a/result.html
+++ b/result.html
@@ -2,7 +2,7 @@
 <html>
 <head>
       <!-- Título de la página -->
-      <title>PaddleShow. Encontrá todas las paletas de pádel.</title>
+      <title>PaddleShow. Encontrá todas las paletas de padel.</title>
 
       <!-- Descripción -->
       <meta name="description" content="El mejor precio y servicio en todas las gamas y marcas, desde básicas hasta importadas. Con asesoramiento personalizado, para que encuentres tu paleta ideal.">
@@ -11,7 +11,7 @@
       <meta name="keywords" content="pádel, paletas de pádel, cotización de paletas, servicios médicos para pádel, mejora de rendimiento, mantenimiento de canchas, PaddleShow">
   
       <!-- Open Graph para Facebook y otras redes -->
-      <meta property="og:title" content="PaddleShow. Encontrá todas las paletas de pádel.">
+      <meta property="og:title" content="PaddleShow. Encontrá todas las paletas de padel.">
       <meta property="og:description" content="El mejor precio y servicio en todas las gamas y marcas, desde básicas hasta importadas. Con asesoramiento personalizado, para que encuentres tu paleta ideal.">
       <meta property="og:image" content="./assets/img/Workshop-150x150 (1).png">
       <meta property="og:url" content="https://www.paddleshow.com">
@@ -19,7 +19,7 @@
   
       <!-- Twitter Card -->
       <meta name="twitter:card" content="summary_large_image">
-      <meta name="twitter:title" content="PaddleShow. Encontrá todas las paletas de pádel.">
+      <meta name="twitter:title" content="PaddleShow. Encontrá todas las paletas de padel.">
       <meta name="twitter:description" content="El mejor precio y servicio en todas las gamas y marcas, desde básicas hasta importadas. Con asesoramiento personalizado, para que encuentres tu paleta ideal.">
       <meta name="twitter:image" content="./assets/img/Workshop-150x150 (1).png">
       <meta name="twitter:url" content="https://www.paddleshow.com">
