--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         
             <button type="button" class="prev-btn inicio">Anterior</button>
             <button type="button" class="next-btn">Siguiente</button>
+            <button type="button" class="whatapp"><a href="https://wa.link/um9oiz" target="_blank">Seguir por WhatsApp</a></button>
         </div>
         <div class="slide">
             <h4>Datos del Jugador</h4>
@@ -135,6 +136,7 @@
             </select>
             <button type="button" class="prev-btn">Anterior</button>
             <button type="button" class="next-btn">Siguiente</button>
+            
         </div>
         <div class="slide">
             <h4>Rango de Precios</h4>
