agregar ws a todas las vistas

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             <input type="number" name="" id="" placeholder="Ingresa aqui tu peso" required>
             <button type="button" class="prev-btn">Anterior</button>
             <button type="button" class="next-btn">Siguiente</button>
+            <button type="button" class="whatapp"><a href="https://wa.link/um9oiz" target="_blank">Seguir por WhatsApp</a></button>
         </div>
         <div class="slide">
             <label for="altura">¿Que categoria jugas?</label>
@@ -136,6 +137,7 @@
             </select>
             <button type="button" class="prev-btn">Anterior</button>
             <button type="button" class="next-btn">Siguiente</button>
+            <button type="button" class="whatapp"><a href="https://wa.link/um9oiz" target="_blank">Seguir por WhatsApp</a></button>
             
         </div>
         <div class="slide">
